# qwen35-worker-vllm

./: Dockerfile  handler.py  patch_engine.py  pyproject.toml  qwen35_boot.py  qwen35_register.py
.github/workflows/: build.yml
failover/: README.md
