[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "qwen35-register"
version = "0.1.0"
description = "Registra los handlers text-only Qwen3_5(Moe)ForCausalLM en vLLM"

# Este entry-point hace que vLLM ejecute register() automáticamente al arrancar.
[project.entry-points."vllm.general_plugins"]
register_qwen35 = "qwen35_register:register"

[tool.setuptools]
py-modules = ["qwen35_register"]
